# RoboCar

./: .gitignore  CommandPool.py  README.md  config.toml  driveTrain.py  example_gpio.py  pyproject.toml
Backend/: app.py
src/robocar/: config_log.py  kinetic_system.py  motor_control.py  navigation_system.py
src/robocar/Backend/: main.py  model.py
